# reflection_experiments

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  comparisons.cpp  deep_bindings.cpp  generalized_fold.hpp  refl_utilities.hpp  reflopt.cpp  reflopt.hpp  reflser.hpp  serialization.cpp  string_literal.hpp  type_synthesis.cpp
benchmarks/: CMakeLists.txt  boost_po.cpp.empy  generate_benchmark.py  reflopt.cpp.empy
cmake/: get_refl_keyword.cmake  refl_experiments_add_benchmark.cmake  refl_experiments_add_executable.cmake  refl_experiments_add_test.cmake  refl_experiments_include_dirs.cmake
include/reflection_experiments/: comparisons.hpp  macros.hpp  meta_utilities.hpp  refl_utilities.hpp  reflopt.hpp  reflser.hpp  string_literal.hpp
include/reflection_experiments/cpp3k/: adapt_hana.hpp  comparisons.hpp  refl_utilities.hpp
include/reflection_experiments/reflexpr/: comparisons.hpp  generalized_fold.hpp  refl_utilities.hpp  reflopt.hpp  reflser.hpp  string_literal.hpp  type_synthesis.hpp
src/: CMakeLists.txt  deep_bindings.cpp  generalized_fold.cpp  reflopt.cpp  serialization.cpp  type_synthesis.cpp
test/: CMakeLists.txt  reflopt.cpp  serialization.cpp
